Output/c--.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec SEMI
    7       | Specifier FunDec CompSt

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag
   14                | STRUCT OptTag LC error RC

   15 OptTag: ID
   16       | %empty

   17 Tag: ID

   18 VarDec: ID
   19       | VarDec LB INT RB
   20       | VarDec LB error RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP
   23       | ID LP error RP

   24 VarList: ParamDec COMMA VarList
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC
   28       | LC DefList error RC

   29 StmtList: Stmt StmtList
   30         | %empty

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | error SEMI

   38 DefList: Def DefList
   39        | %empty

   40 Def: Specifier DecList SEMI
   41    | Specifier error SEMI

   42 DecList: Dec
   43        | Dec COMMA DecList

   44 Dec: VarDec
   45    | VarDec ASSIGNOP Exp
   46    | VarDec error Exp

   47 Exp: Exp ASSIGNOP Exp
   48    | Exp AND Exp
   49    | Exp OR Exp
   50    | Exp RELOP Exp
   51    | Exp PLUS Exp
   52    | Exp MINUS Exp
   53    | Exp STAR Exp
   54    | Exp DIV Exp
   55    | LP Exp RP
   56    | MINUS Exp
   57    | NOT Exp
   58    | ID LP Args RP
   59    | ID LP RP
   60    | Exp LB Exp RB
   61    | Exp DOT ID
   62    | ID
   63    | INT
   64    | FLOAT
   65    | LP error RP
   66    | Exp LB error RB

   67 Args: Exp COMMA Args
   68     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 14 20 23 28 37 41 46 65 66
INT (258) 19 63
FLOAT (259) 64
TYPE (260) 10
PLUS (261) 51
MINUS (262) 52 56
STAR (263) 53
DIV (264) 54
COMMA (265) 9 24 43 67
SEMI (266) 4 5 6 31 33 37 40 41
DOT (267) 61
RELOP (268) 50
ASSIGNOP (269) 45 47
AND (270) 48
OR (271) 49
NOT (272) 57
LP (273) 21 22 23 34 35 36 55 58 59 65
RP (274) 21 22 23 34 35 36 55 58 59 65
LB (275) 19 20 60 66
RB (276) 19 20 60 66
LC (277) 12 14 27 28
RC (278) 12 14 27 28
STRUCT (279) 12 13 14
RETURN (280) 33
IF (281) 34 35
ELSE (282) 35
WHILE (283) 36
ID (284) 15 17 18 21 22 23 58 59 61 62
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7, on right: 2
ExtDecList (35)
    on left: 8 9, on right: 4 9
Specifier (36)
    on left: 10 11, on right: 4 5 6 7 26 40 41
StructSpecifier (37)
    on left: 12 13 14, on right: 11
OptTag (38)
    on left: 15 16, on right: 12 14
Tag (39)
    on left: 17, on right: 13
VarDec (40)
    on left: 18 19 20, on right: 8 9 19 20 26 44 45 46
FunDec (41)
    on left: 21 22 23, on right: 6 7
VarList (42)
    on left: 24 25, on right: 21 24
ParamDec (43)
    on left: 26, on right: 24 25
CompSt (44)
    on left: 27 28, on right: 7 32
StmtList (45)
    on left: 29 30, on right: 27 29
Stmt (46)
    on left: 31 32 33 34 35 36 37, on right: 29 34 35 36
DefList (47)
    on left: 38 39, on right: 12 27 28 38
Def (48)
    on left: 40 41, on right: 38
DecList (49)
    on left: 42 43, on right: 40 43
Dec (50)
    on left: 44 45 46, on right: 42 43
Exp (51)
    on left: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64
    65 66, on right: 31 33 34 35 36 45 46 47 48 49 50 51 52 53 54 55
    56 57 60 61 66 67 68
Args (52)
    on left: 67 68, on right: 58 67


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   10 Specifier: TYPE .

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT . OptTag LC DefList RC
   13                | STRUCT . Tag
   14                | STRUCT . OptTag LC error RC

    ID  shift, and go to state 8

    $default  reduce using rule 16 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec SEMI
    7       | Specifier . FunDec CompSt

    SEMI  shift, and go to state 13
    ID    shift, and go to state 14

    ExtDecList  go to state 15
    VarDec      go to state 16
    FunDec      go to state 17


State 7

   11 Specifier: StructSpecifier .

    $default  reduce using rule 11 (Specifier)


State 8

   15 OptTag: ID .
   17 Tag: ID .

    LC        reduce using rule 15 (OptTag)
    $default  reduce using rule 17 (Tag)


State 9

   12 StructSpecifier: STRUCT OptTag . LC DefList RC
   14                | STRUCT OptTag . LC error RC

    LC  shift, and go to state 18


State 10

   13 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 13 (StructSpecifier)


State 11

    0 $accept: Program $end .

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 13

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 14

   18 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP
   23       | ID . LP error RP

    LP  shift, and go to state 19

    $default  reduce using rule 18 (VarDec)


State 15

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 20


State 16

    8 ExtDecList: VarDec .
    9           | VarDec . COMMA ExtDecList
   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB

    COMMA  shift, and go to state 21
    LB     shift, and go to state 22

    $default  reduce using rule 8 (ExtDecList)


State 17

    6 ExtDef: Specifier FunDec . SEMI
    7       | Specifier FunDec . CompSt

    SEMI  shift, and go to state 23
    LC    shift, and go to state 24

    CompSt  go to state 25


State 18

   12 StructSpecifier: STRUCT OptTag LC . DefList RC
   14                | STRUCT OptTag LC . error RC

    error   shift, and go to state 26
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    RC  reduce using rule 39 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 28
    Def              go to state 29


State 19

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP
   23       | ID LP . error RP

    error   shift, and go to state 30
    TYPE    shift, and go to state 1
    RP      shift, and go to state 31
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 33
    ParamDec         go to state 34


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

    9 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 35

    ExtDecList  go to state 36
    VarDec      go to state 16


State 22

   19 VarDec: VarDec LB . INT RB
   20       | VarDec LB . error RB

    error  shift, and go to state 37
    INT    shift, and go to state 38


State 23

    6 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 6 (ExtDef)


State 24

   27 CompSt: LC . DefList StmtList RC
   28       | LC . DefList error RC

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 39
    Def              go to state 29


State 25

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


State 26

   14 StructSpecifier: STRUCT OptTag LC error . RC

    RC  shift, and go to state 40


State 27

   40 Def: Specifier . DecList SEMI
   41    | Specifier . error SEMI

    error  shift, and go to state 41
    ID     shift, and go to state 35

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


State 28

   12 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 45


State 29

   38 DefList: Def . DefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 27
    StructSpecifier  go to state 7
    DefList          go to state 46
    Def              go to state 29


State 30

   23 FunDec: ID LP error . RP

    RP  shift, and go to state 47


State 31

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


State 32

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 35

    VarDec  go to state 48


State 33

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 49


State 34

   24 VarList: ParamDec . COMMA VarList
   25        | ParamDec .

    COMMA  shift, and go to state 50

    $default  reduce using rule 25 (VarList)


State 35

   18 VarDec: ID .

    $default  reduce using rule 18 (VarDec)


State 36

    9 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 9 (ExtDecList)


State 37

   20 VarDec: VarDec LB error . RB

    RB  shift, and go to state 51


State 38

   19 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 52


State 39

   27 CompSt: LC DefList . StmtList RC
   28       | LC DefList . error RC

    error   shift, and go to state 53
    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 24
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61
    ID      shift, and go to state 62

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 64
    Stmt      go to state 65
    Exp       go to state 66


State 40

   14 StructSpecifier: STRUCT OptTag LC error RC .

    $default  reduce using rule 14 (StructSpecifier)


State 41

   41 Def: Specifier error . SEMI

    SEMI  shift, and go to state 67


State 42

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   44 Dec: VarDec .
   45    | VarDec . ASSIGNOP Exp
   46    | VarDec . error Exp

    error     shift, and go to state 68
    ASSIGNOP  shift, and go to state 69
    LB        shift, and go to state 22

    COMMA  reduce using rule 44 (Dec)
    SEMI   reduce using rule 44 (Dec)


State 43

   40 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 70


State 44

   42 DecList: Dec .
   43        | Dec . COMMA DecList

    COMMA  shift, and go to state 71

    $default  reduce using rule 42 (DecList)


State 45

   12 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 12 (StructSpecifier)


State 46

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


State 47

   23 FunDec: ID LP error RP .

    $default  reduce using rule 23 (FunDec)


State 48

   19 VarDec: VarDec . LB INT RB
   20       | VarDec . LB error RB
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 22

    $default  reduce using rule 26 (ParamDec)


State 49

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


State 50

   24 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 72
    ParamDec         go to state 34


State 51

   20 VarDec: VarDec LB error RB .

    $default  reduce using rule 20 (VarDec)


State 52

   19 VarDec: VarDec LB INT RB .

    $default  reduce using rule 19 (VarDec)


State 53

   28 CompSt: LC DefList error . RC
   37 Stmt: error . SEMI

    SEMI  shift, and go to state 73
    RC    shift, and go to state 74


State 54

   63 Exp: INT .

    $default  reduce using rule 63 (Exp)


State 55

   64 Exp: FLOAT .

    $default  reduce using rule 64 (Exp)


State 56

   56 Exp: MINUS . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 75


State 57

   57 Exp: NOT . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 76


State 58

   55 Exp: LP . Exp RP
   65    | LP . error RP

    error  shift, and go to state 77
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 78


State 59

   33 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 79


State 60

   34 Stmt: IF . LP Exp RP Stmt
   35     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 80


State 61

   36 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 81


State 62

   58 Exp: ID . LP Args RP
   59    | ID . LP RP
   62    | ID .

    LP  shift, and go to state 82

    $default  reduce using rule 62 (Exp)


State 63

   32 Stmt: CompSt .

    $default  reduce using rule 32 (Stmt)


State 64

   27 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 83


State 65

   29 StmtList: Stmt . StmtList

    error   shift, and go to state 84
    INT     shift, and go to state 54
    FLOAT   shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58
    LC      shift, and go to state 24
    RETURN  shift, and go to state 59
    IF      shift, and go to state 60
    WHILE   shift, and go to state 61
    ID      shift, and go to state 62

    RC  reduce using rule 30 (StmtList)

    CompSt    go to state 63
    StmtList  go to state 85
    Stmt      go to state 65
    Exp       go to state 66


State 66

   31 Stmt: Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error RB

    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    SEMI      shift, and go to state 90
    DOT       shift, and go to state 91
    RELOP     shift, and go to state 92
    ASSIGNOP  shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    LB        shift, and go to state 96


State 67

   41 Def: Specifier error SEMI .

    $default  reduce using rule 41 (Def)


State 68

   46 Dec: VarDec error . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 97


State 69

   45 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 98


State 70

   40 Def: Specifier DecList SEMI .

    $default  reduce using rule 40 (Def)


State 71

   43 DecList: Dec COMMA . DecList

    ID  shift, and go to state 35

    VarDec   go to state 42
    DecList  go to state 99
    Dec      go to state 44


State 72

   24 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 24 (VarList)


State 73

   37 Stmt: error SEMI .

    $default  reduce using rule 37 (Stmt)


State 74

   28 CompSt: LC DefList error RC .

    $default  reduce using rule 28 (CompSt)


State 75

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   56    | MINUS Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error RB

    STAR  shift, and go to state 88
    DIV   shift, and go to state 89
    DOT   shift, and go to state 91
    LB    shift, and go to state 96

    $default  reduce using rule 56 (Exp)


State 76

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   57    | NOT Exp .
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error RB

    DOT  shift, and go to state 91
    LB   shift, and go to state 96

    $default  reduce using rule 57 (Exp)


State 77

   65 Exp: LP error . RP

    RP  shift, and go to state 100


State 78

   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   55    | LP Exp . RP
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error RB

    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    DOT       shift, and go to state 91
    RELOP     shift, and go to state 92
    ASSIGNOP  shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    RP        shift, and go to state 101
    LB        shift, and go to state 96


State 79

   33 Stmt: RETURN Exp . SEMI
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error RB

    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    SEMI      shift, and go to state 102
    DOT       shift, and go to state 91
    RELOP     shift, and go to state 92
    ASSIGNOP  shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    LB        shift, and go to state 96


State 80

   34 Stmt: IF LP . Exp RP Stmt
   35     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 103


State 81

   36 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 104


State 82

   58 Exp: ID LP . Args RP
   59    | ID LP . RP

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    RP     shift, and go to state 105
    ID     shift, and go to state 62

    Exp   go to state 106
    Args  go to state 107


State 83

   27 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 27 (CompSt)


State 84

   37 Stmt: error . SEMI

    SEMI  shift, and go to state 73


State 85

   29 StmtList: Stmt StmtList .

    $default  reduce using rule 29 (StmtList)


State 86

   51 Exp: Exp PLUS . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 108


State 87

   52 Exp: Exp MINUS . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 109


State 88

   53 Exp: Exp STAR . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 110


State 89

   54 Exp: Exp DIV . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 111


State 90

   31 Stmt: Exp SEMI .

    $default  reduce using rule 31 (Stmt)


State 91

   61 Exp: Exp DOT . ID

    ID  shift, and go to state 112


State 92

   50 Exp: Exp RELOP . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 113


State 93

   47 Exp: Exp ASSIGNOP . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 114


State 94

   48 Exp: Exp AND . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 115


State 95

   49 Exp: Exp OR . Exp

    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 116


State 96

   60 Exp: Exp LB . Exp RB
   66    | Exp LB . error RB

    error  shift, and go to state 117
    INT    shift, and go to state 54
    FLOAT  shift, and go to state 55
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58
    ID     shift, and go to state 62

    Exp  go to state 118


State 97

   46 Dec: VarDec error Exp .
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error RB

    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    DOT       shift, and go to state 91
    RELOP     shift, and go to state 92
    ASSIGNOP  shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    LB        shift, and go to state 96

    $default  reduce using rule 46 (Dec)


State 98

   45 Dec: VarDec ASSIGNOP Exp .
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error RB

    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    DOT       shift, and go to state 91
    RELOP     shift, and go to state 92
    ASSIGNOP  shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    LB        shift, and go to state 96

    $default  reduce using rule 45 (Dec)


State 99

   43 DecList: Dec COMMA DecList .

    $default  reduce using rule 43 (DecList)


State 100

   65 Exp: LP error RP .

    $default  reduce using rule 65 (Exp)


State 101

   55 Exp: LP Exp RP .

    $default  reduce using rule 55 (Exp)


State 102

   33 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 33 (Stmt)


State 103

   34 Stmt: IF LP Exp . RP Stmt
   35     | IF LP Exp . RP Stmt ELSE Stmt
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error RB

    PLUS      shift, and go to state 86
    MINUS     shift, and go to state 87
    STAR      shift, and go to state 88
    DIV       shift, and go to state 89
    DOT       shift, and go to state 91
    RELOP     shift, and go to state 92
    ASSIGNOP  shift, and go to state 93
    AND       shift, and go to state 94
    OR        shift, and go to state 95
    RP        shift, and go to state 119
    LB        shift, and go to state 96


State 104

   36 Stmt: WHILE LP Exp . RP Stmt
   47 Exp: Exp . ASSIGNOP Exp
   48    | Exp . AND Exp
   49    | Exp . OR Exp
   50    | Exp . RELOP Exp
   51    | Exp . PLUS Exp
   52    | Exp . MINUS Exp
   53    | Exp . STAR Exp
   54    | Exp . DIV Exp
   60    | Exp . LB Exp RB
   61    | Exp . DOT ID
   66    | Exp . LB error RB
